<resources>
    <string name="app_name">iSeat</string>
    <string name="quote">iSeat, You Seat, We All Find a Seat</string>

    <!--    RoomListRecyclerView Strings    -->
    <string name="RoomList_TextView_Capacity">%d/%d</string>

    <!--    AddSensorDialogFragment Strings    -->
    <string name="AddSensor_TextView_AvailableSensors">Available Sensors</string>
    <string name="AddSensor_TextView_NoneAvailable">* No available sensors *</string>
    <string name="AddSensor_TextView_SelectedRoom">Please select a sensor for:</string>

    <!--    RemoveSensorDialogFragment Strings  -->
    <string name="RemoveSensor_TextView_ForRoom">Sensors in room:</string>
    <string name="RemoveSensor_TextView_NoSensors">* No sensors assigned to room *</string>
    <string name="RemoveSensor_TextView_DeleteMsg">Please select a sensor to remove.</string>

    <!--    AdminRoomsActivity Strings  -->
    <string name="Extra_adminEmail">admin_email</string>
    <string name="AdminRooms_Toolbar_Tile">\'s Rooms</string>
    <string name="AdminRooms_TextView_Cancel">Swipe or Press Back to cancel</string>

    <!--    AdminRoomsRecyclerView Strings  -->
    <string name="AdminRooms_ContentDescription_AddSensor">Add Sensor</string>
    <string name="AdminRooms_ContentDescription_RemoveSensor">Remove Sensor</string>

    <!--    AddRoomDialogFragment Strings   -->
    <string name="AddRoom_TextView_AddRoomInfo">Add Room Info:</string>
    <string name="AddRoom_TextView_RoomName">Name:</string>
    <string name="AddRoom_TextView_RoomLocation">Location:</string>
    <string name="AddRoom_EditText_HintName">Enter Name Here</string>
    <string name="AddRoom_EditText_HintLocation">Enter Location Here</string>
    <string name="AddRoom_Button_AddRoom">Add Room</string>

    <!--    Welcome/signUp/signIn Activity Strings   -->
    <string name="iseat_logo">iSeat Logo</string>
    <string name="getting_started">Getting Started</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_here">Login Here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="create_an_account">Create an account</string>
    <string name="login">Login</string>
    <string name="first_time">First Time?</string>
    <string name="register_here">Register Here</string>
    <string name="admin">Are you an admin?</string>
    <string name="are_you_an_admin">Are you an admin?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="admin_code">Admin code</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- ActivityUserProfile Strings -->

    <!-- Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="seats_available">Seats Available:</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="manage_rooms">Manage Rooms</string>
    <string name="add_room">Add room</string>
    <string name="remove_room">Remove room</string>
    <string name="delete">Delete</string>
    <string name="title_activity_favorite_room_card">FavoriteRoomCard</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="avatar">Avatar</string>
    <string name="change_avatar">Change Avatar</string>
    <string name="edit">Edit</string>
    <string name="cancel">CANCEL</string>
    <string name="save">SAVE</string>
    <string name="close">Close</string>
    <string name="room_location">Room Location</string>
    <string name="room">Room</string>
    <string name="room_capacity">Room Capacity</string>

</resources>