<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- action button for refresh -->
    <item android:title="@string/refresh"
        android:id="@+id/refreshActionButton"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_refresh_24"/>

    <!-- action button for Settings -->
    <item android:title="@string/settings"
        android:id="@+id/settingsActionButton"
        app:showAsAction="never"/>

    <!-- action button for admin activity-->
    <item android:title="@string/manage_rooms"
        android:id="@+id/manageRoomActionButton"
        app:showAsAction="never"/>

    <!-- action button for signing out -->
    <item android:title="@string/sign_out"
        android:id="@+id/signOutActionButton"
        app:showAsAction="never"/>

</menu>