<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".views.Registration.RegisterActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/card_view_boarder"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/text_bubble_border"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/signupText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="@color/light_teal"
                android:textSize="24sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/usernameSignup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/text_bubble_border"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="8dp"
                android:hint="@string/username"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/emailSignup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/text_bubble_border"
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/passwordSignup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/text_bubble_border"
                android:drawableStart="@drawable/ic_baseline_lock_open_24"
                android:drawablePadding="8dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/passwordRepeatSignup"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/text_bubble_border"
                android:drawableStart="@drawable/ic_baseline_lock_open_24"
                android:drawablePadding="8dp"
                android:hint="@string/repeat_password"
                android:inputType="textPassword"
                android:padding="8dp"
                android:textColor="@color/black" />

            <RadioGroup
                android:id="@+id/adminRadioButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/are_you_an_admin"
                    android:textColor="@color/light_blue" />

                <RadioButton
                    android:id="@+id/adminYes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/light_teal"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/adminNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:buttonTint="@color/light_teal"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/no" />
            </RadioGroup>

            <EditText
                android:id="@+id/adminCodeSignup"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/text_bubble_border"
                android:hint="@string/admin_code"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:visibility="gone" />

            <Button
                android:id="@+id/createAccountButton"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/orange"
                android:text="@string/create_an_account"
                android:textAlignment="gravity"
                android:textSize="14sp"
                app:cornerRadius="20dp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView">

        <TextView
            android:id="@+id/LoginText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_light"
            android:text="@string/already_have_an_account"
            android:textAlignment="center"
            android:paddingTop="10dp"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <Button
            android:id="@+id/loginRedirect"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/login_here"
            android:textColor="@color/orange"
            android:textSize="14sp"
            android:textStyle="italic" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>