<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:background="@drawable/card_view_boarder"
        app:cardBackgroundColor="@color/page_background_color"
        app:cardCornerRadius="22dp"
        app:cardElevation="20dp"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewAvailableSensors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/AddSensor_TextView_AvailableSensors"
                android:textColor="@color/text_header"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewNoneAvailable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AddSensor_TextView_NoneAvailable"
                android:textColor="@color/text_small"
                android:textStyle="italic" />

            <ListView
                android:id="@+id/listViewAvailableSensors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewSelectedRoom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/AddSensor_TextView_SelectedRoom"
                android:textColor="@color/text_grey"
                android:textStyle="italic" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>